# matter-skull-switch

./: .gitignore  README.md  SETUP.md  project-overview-and-build.mdc  scratchpad.md
docs/: .cursorrules  CHANGELOG.md  circuit_diagram.md  design.md  esp32c3-migration.md  led_indicator.md  requirements.md  scaled-qr-code.psd  skull-integration.md  spec.md  todo.md  wiring.md
docs/docs/: design.md  led_indicator.md  todo.md
firmware/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32c3  test_to_underlying.cpp  test_to_underlying.out
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  app_reset.cpp  idf_component.yml
firmware/main/drivers/: CMakeLists.txt  led_indicator.c  pir_sensor.c  shtc3.cpp
firmware/main/drivers/include/: led_indicator.h  pir_sensor.h
